--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
   db:
     image: postgres:13.0-alpine
     volumes:
-      - /var/lib/postgresql/data/
+      - db_data:/var/lib/postgresql/data/
     env_file:
       - ./.env
 
@@ -32,5 +32,6 @@ services:
       - web
 
 volumes:
+  db_data:
   static_value:
   media_value:
